--- a/POS/index.html
+++ b/POS/index.html
@@ -21,12 +21,12 @@
                         </a>
                         <ul class="nav nav-pills flex-sm-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 justify-content-center align-items-center align-items-sm-start" id="menu">
                             <li class="nav-item">
-                                <a href="#" class="nav-link px-sm-0 px-2">
+                                <a rhef="#" class="nav-link px-sm-0 px-2">
                                     <i class="fs-5 bi-house"></i><span class="ms-1 d-none d-sm-inline"><img src="https://img.icons8.com/material-outlined/24/000000/dashboard.png"/>Dashboard</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-sm-0 px-2">
+                                <a href="#" class="nav-link px-sm-0 px-2">
                                     <i class="fs-5 bi-speedometer2"></i><span class="ms-1 d-none d-sm-inline"><img src="https://img.icons8.com/material-outlined/24/000000/product.png"/>Products</span> </a>
                             </li>
                             <li>
