--- a/inventory/inventory.html
+++ b/inventory/inventory.html
@@ -10,10 +10,13 @@
         .heading{
             margin-left: 15%;
             padding: .4%;
-            display: block;
             background-color: snow;
         }
 
+        .heading ul{
+            list-style-type: none;
+        }
+        
         .content{
             background-color: #8b0607;
             display: block;
@@ -34,6 +37,23 @@
 
         .navBar h2{
             text-align: center;
+        }
+
+        .center{
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .inventory{
+            background-color: white;
+            border-radius: .5vw;
+            
+        }
+
+        .inventory td{
+            padding: 1vw;
+            background-color: wheat;
         }
 
         .containerr{
@@ -67,12 +87,31 @@
         </div>
 
         <div class="heading">
-            <h1>Inventory</h1>
+            <ul>
+                <li><h1>Inventory</h1></li>
+                <li style="float: right;"><h4>Admin</h4></li>
+                <li style="float: right;"><h4>logout</h4></li>
+            </ul>
         </div>
 
+        <br><br>
         <div class="content">
             <div>
-                <p>lorem lorem</p>
+                <table class="center inventory">
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>Flavor</th>
+                        <th>QTY</th>
+                    </tr>
+
+                    <tr>
+                        <td>2</td>
+                        <td>Hot incenirating Popcorn</td>
+                        <td>Spicy Cheese</td>
+                        <td>5</td>
+                    </tr>
+                </table>
             </div>
         </div>
         <!--
