--- a/POS/index.html
+++ b/POS/index.html
@@ -14,53 +14,42 @@
         <div class="container-fluid overflow-hidden">
             <div class="row vh-100 overflow-auto">
                  <!--NAVBAR-->
-                <div class="col-12 col-sm-3 col-xl-2 px-sm-2 px-0 d-flex sticky-top">
-                    <div class="d-flex flex-sm-column flex-row flex-grow-1 align-items-center align-items-sm-start px-3 pt-2 text-white">
-                        <a href="/" class="d-flex align-items-center pb-sm-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                            <img class="logo" src="assets/logo.png">
-                        </a>
-                        <ul class="nav nav-pills flex-sm-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 justify-content-center align-items-center align-items-sm-start" id="menu">
-                            <li class="nav-item">
-                                <a rhef="#" class="nav-link px-sm-0 px-2">
-                                    <i class="fs-5 bi-house"></i><span class="ms-1 d-none d-sm-inline"><img src="https://img.icons8.com/material-outlined/24/000000/dashboard.png"/>Dashboard</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-sm-0 px-2">
-                                    <i class="fs-5 bi-speedometer2"></i><span class="ms-1 d-none d-sm-inline"><img src="https://img.icons8.com/material-outlined/24/000000/product.png"/>Products</span> </a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-sm-0 px-2">
-                                    <i class="fs-5 bi-table"></i><span class="ms-1 d-none d-sm-inline"><img src="https://img.icons8.com/ios/30/000000/purchase-order.png"/>Orders</span></a>
-                            </li>
-
-                            <li>
-                                <a href="#" class="nav-link px-sm-0 px-2">
-                                    <i class="fs-5 bi-grid"></i><span class="ms-1 d-none d-sm-inline"><img src="https://img.icons8.com/ios-glyphs/30/000000/group.png"/>Customers</span></a>
-                            </li>
-                            <li>
-                                <a href="#" class="nav-link px-sm-0 px-2">
-                                    <i class="fs-5 bi-people"></i><span class="ms-1 d-none d-sm-inline"><img src="https://img.icons8.com/material-two-tone/24/000000/total-sales-1.png"/>Sales Report</span> </a>
-                            </li>
-                            <button class="logout btn btn-danger">Logout</button>
-                        </ul>
+                 <nav class="navbar fixed-top navbar-expand-lg navbar- bg-warning">
+                    <div class="container-fluid">
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./index.html">Dashboard</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./products/product.html">Products</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./orders/orders.html">Orders</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./customers.html">Customers</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="./salesreport.html">Sales Report</a>
+                                </li>
+                            </ul>
+                            <a href="./login/login.html"><span class="ms-1 d-none d-sm-inline"><img src="assets/user.png" height="50" width="50"><button class="logout btn btn-danger">Logout</button></a>
+                        </div>
                     </div>
-                </div>
+                </nav>
                 <!--2ND COLUMN-->
                 <div class="col d-flex flex-column h-sm-100">
                     <main class="row overflow-auto">
                         <div class="col bg-light ptb-4">
-                            <header class="row py-4 mt-auto">
-                                <h2 class="col-12 bg-light"> POINT OF SALES<img class="user" src="https://img.icons8.com/material-outlined/48/000000/user--v1.png"/></h2>
-                            </header>
+                            
                         </div>
-                        <hr />
                         <h1>Dashboard</h1>
                         <div class="dashbtn">
-                            <button type="button" class="btn btn-secondary btn-lg"><img src="assets/product.png"><br>Product</button>
-                            <button type="button" class="btn btn-secondary btn-lg"><img src="assets/orders.png"><br>Orders</button><br>
-                            <button type="button" class="btn btn-secondary btn-lg"><img src="assets/customers.png"><br>Customers</button>
-                            <button type="button" class="btn btn-secondary btn-lg"><img src="assets/sales.png"><br>Sales Report</button>
+                            <button type="button" class="btn btn-light btn-lg"><img src="assets/product.png"><br><a href="product.html">Product</a></button>
+                            <button type="button" class="btn btn-light btn-lg"><img src="assets/orders.png"><br><a href="orders.html">Orders</a></button><br>
+                            <button type="button" class="btn btn-light btn-lg"><img src="assets/customers.png"><br><a href="customers.html">Customers</a></button>
+                            <button type="button" class="btn btn-light btn-lg"><img src="assets/sales.png"><br><a href="salesreport.html">Sales Report</a></button>
                         </div>
                     </main>
 
@@ -68,8 +57,5 @@
             </div>
         </div>
 
-        <script src="script.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     </body>
 </html>
