--- a/POS/index.html
+++ b/POS/index.html
@@ -28,10 +28,10 @@
                                     <a class="nav-link" href="./orders/orders.html">Orders</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./customers.html">Customers</a>
+                                    <a class="nav-link" href="./customer/customers.html">Customers</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./salesreport.html">Sales Report</a>
+                                    <a class="nav-link" href="./salesreport/salesreport.html">Sales Report</a>
                                 </li>
                             </ul>
                             <a href="./login/login.html"><span class="ms-1 d-none d-sm-inline"><img src="assets/user.png" height="50" width="50"><button class="logout btn btn-danger">Logout</button></a>
